k8s/services/gatus/extra/base/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: gatus
          port: 80
